# virtual_wall_ros2

./: README.md
software_simulation/turtlebot3_ws/: frames_2024-07-18_09.45.17.gv
software_simulation/turtlebot3_ws/install/: local_setup.sh  setup.sh
software_simulation/turtlebot3_ws/install/costmap_queue/share/costmap_queue/: package.sh
software_simulation/turtlebot3_ws/install/dwb_core/share/dwb_core/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dwb_critics/share/dwb_critics/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dwb_msgs/share/dwb_msgs/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dwb_plugins/share/dwb_plugins/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
software_simulation/turtlebot3_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: package.sh
software_simulation/turtlebot3_ws/install/nav2_amcl/lib/nav2_amcl/: amcl
software_simulation/turtlebot3_ws/install/nav2_amcl/share/nav2_amcl/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/nav2_behavior_tree/share/nav2_behavior_tree/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/nav2_behaviors/lib/nav2_behaviors/: behavior_server
software_simulation/turtlebot3_ws/install/nav2_behaviors/share/nav2_behaviors/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/nav2_bringup/share/nav2_bringup/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/nav2_bt_navigator/lib/nav2_bt_navigator/: bt_navigator
software_simulation/turtlebot3_ws/install/nav2_bt_navigator/share/nav2_bt_navigator/: local_setup.sh  package.sh
software_simulation/turtlebot3_ws/install/nav2_collision_monitor/lib/nav2_collision_monitor/: collision_monitor
software_simulation/turtlebot3_ws/install/plu_virtual_wall/share/plu_virtual_wall/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  virtual_wall_ros2_plugin.xml
software_simulation/turtlebot3_ws/install/plu_virtual_wall/share/plu_virtual_wall/launch/: test.launch.py
software_simulation/turtlebot3_ws/install/plu_virtual_wall/share/plu_virtual_wall/params/: test_params.yaml
software_simulation/turtlebot3_ws/log/: latest_build
software_simulation/turtlebot3_ws/src/log/: latest_build
software_simulation/turtlebot3_ws/src/plu_virtual_wall/: CMakeLists.txt  positions.yaml
software_simulation/turtlebot3_ws/src/plu_virtual_wall/config/: virtual_wall_params.yaml
software_simulation/turtlebot3_ws/src/plu_virtual_wall/include/plu_virtual_wall/: virtual_wall_layer.hpp  virtual_wall_layer_test.hpp
software_simulation/turtlebot3_ws/src/plu_virtual_wall/launch/: test.launch.py  test1.launch.py
software_simulation/turtlebot3_ws/src/plu_virtual_wall/src/: virtual_wall_layer.cpp  virtual_wall_node.cpp  virtual_wall_tes1.cpp
software_simulation/turtlebot3_ws/src/tutorial_interfaces/: package.xml
(+239 files in other folders)
